--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -18,7 +18,10 @@ jobs:
   build:
 
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    
+    env:
+      ImageOS: ubuntu20
 
     steps:
     - uses: actions/checkout@v3
