--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         elixir-version: '1.14.0' # Define the elixir version [required]
         otp-version: '24.1' # Define the OTP version [required]
+        version-type: strict
     - name: Restore dependencies cache
       uses: actions/cache@v3
       with:
