--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -41,5 +41,6 @@ jobs:
       run: make test
     - name: Run coverage
       run: make test.cover
-    
+    - name: Post coverage
+      run: make coverall.post
 
